# py-gics

./: LICENSE  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
gics/: __init__.py  gics.py  helpers.py  map.py
gics/definitions/: 20140228.json  20160901.json  20180929.json  __init__.py  d_20140228.py  d_20160901.py  d_20180929.py  d_20230318.py
test/: __init__.py  test_gics.py
