[tool.poetry]
name = "gics"
version = "0.2.1"
description = "This library provides a way to parse, manipulate and analyze GICS codes."
authors = ["dorklein <dorklein2@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
